--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,37 +36,54 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:background="@color/colorPrimaryLight"
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/et_home"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="10dp"
-                android:background="@android:color/white"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:descendantFocusability="beforeDescendants"
+                android:focusableInTouchMode="true"
                 android:gravity="center"
-                android:inputType="number"
-                android:padding="5dp" />
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/et_away"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:background="@android:color/white"
-                android:gravity="center"
-                android:inputType="number"
-                android:padding="5dp" />
+                <EditText
+                    android:id="@+id/et_home"
+                    android:layout_width="70dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@android:color/white"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:padding="5dp"
+                    android:selectAllOnFocus="true"
+                    android:text="0" />
+
+                <EditText
+                    android:id="@+id/et_away"
+                    android:layout_width="70dp"
+                    android:layout_height="50dp"
+                    android:background="@android:color/white"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:padding="5dp"
+                    android:selectAllOnFocus="true"
+                    android:text="0" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_set_result"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorPrimaryDark"
+                android:padding="10dp"
+                android:text="Send results"
+                android:textColor="@android:color/white" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btn_set_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Send results" />
     </LinearLayout>
 
 </RelativeLayout>
