--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,44 +6,57 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".PitchFragment">
+    tools:context=".pitch.PitchFragment">
 
-    <TextView
-        android:id="@+id/tv_away"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/final_scores_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/textView3"
-        android:layout_toRightOf="@+id/textView3"
-        android:text="0"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:gravity="center"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView3"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_toLeftOf="@+id/textView3"
-        android:layout_toStartOf="@+id/textView3"
-        android:text="0"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        <TextView
+            android:id="@+id/tv_home"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/bg_score_home"
+            android:gravity="center"
+            android:text="123"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
-        android:text=":"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:text=":"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_away"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/bg_score_away"
+            android:gravity="center"
+            android:text="0"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/img_pitch"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/final_scores_layout"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true" />
@@ -53,7 +66,7 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
-        android:background="#DA70D6"
+        android:background="@color/colorPrimaryLight"
         android:gravity="center"
         android:orientation="horizontal">
 
