--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#AD172B</color>
+    <color name="colorPrimaryDark">#8a1222</color>
+    <color name="colorPrimaryLight">#e04a5e</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
